--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-
 <app-barranav></app-barranav>
-
-<router-outlet>
-
-</router-outlet>
+<div class="container z-depth-2">
+<router-outlet></router-outlet>
+</div>
 <app-piedepagina></app-piedepagina>
