--- a/src/app/modulos/seguridad/identificacion/identificacion.component.html
+++ b/src/app/modulos/seguridad/identificacion/identificacion.component.html
@@ -1,1 +1,43 @@
-<p>identificacion works!</p>
+
+    <div class="container"><div id="login-page" >
+<div class="col s12 m6 l4 z-depth-4 card-panel border-radius-6 login-card bg-opacity-8">
+<form [formGroup]="fgvalidador" (ngSubmit)="identificarusuario()" class="login-form" >
+  <div class="row">
+    <div class="input-field col s12">
+      <h5 class="ml-4 center">Identificación de usuario</h5>
+    </div>
+  </div>
+  <div class="row margin">
+    <div class="input-field col s12">
+      <i class="material-icons prefix pt-2">person_outline</i>
+      <input formControlName="usuario" type="email">
+      <label for="usuario" class="center-align">Usuario</label>
+    </div>
+  </div>
+  <div class="row margin">
+    <div class="input-field col s12">
+      <i class="material-icons prefix pt-2">lock_outline</i>
+      <input formControlName="clave" type="password">
+      <label for="password">Password</label>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="input-field col s12 center-align">
+      <button  [disabled]="!fgvalidador.valid" type="submit"  class="btn center-align waves-effect waves-light border-round light-blue col s12 ">Entrar</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s6 m6 l6">
+      <p class="margin medium-small"><a href="user-register.html">Registrese ahora!</a></p>
+    </div>
+    <div class="input-field col s6 m6 l6">
+      <p class="margin right-align medium-small"><a href="user-forgot-password.html">olvidó password ?</a></p>
+    </div>
+  </div>
+</form>
+</div>
+</div>
+   
+    
+
