--- a/src/app/plantila/contenido/contenido.component.html
+++ b/src/app/plantila/contenido/contenido.component.html
@@ -1,1 +1,9 @@
-<p>contenido works!</p>
+
+    
+    <div >
+        <img src="https://d.img.vision/pamilcar/header.png" width="100%" height="50%">
+        
+        
+        
+        </div>
+      
