--- a/src/app/modulos/administracion/personas/creacionpersonas/creacionpersonas.component.html
+++ b/src/app/modulos/administracion/personas/creacionpersonas/creacionpersonas.component.html
@@ -1,1 +1,48 @@
-<p>creacionpersonas works!</p>
+<div class="container" >
+    <div class="card-content">
+    <div class="row center-align ">
+    <div class="col s12 "><h3 class="text-center grey-text text-lighten-1 ">Crear Cliente</h3> </div>
+  </div>
+  <div class="row center-align">
+    <div class="col s12 m4 l2 "></div>
+    <div class="col s12 m4 l8 z-depth-2">
+      <form>
+        <div class="row ">
+          <div class="input-field col s6">
+            <i class="material-icons prefix">account_circle</i>
+            <input id="nombre" type="text" class="validate">
+            <label for="nombre">Nombre</label>
+          </div>       
+          <div class="input-field col s6">
+            <i class="material-icons prefix">recent_actors</i>
+          <input id="apellido" type="text">
+          <label for="apellido">Apellido</label>
+        </div>
+      </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="email" class="validate">
+            <label for="email">Email</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">phone</i>
+            <input id="telefono" type="tel" class="validate">
+            <label for="telefono">Telefono</label>
+          </div>
+        </div>
+        <div class="row">  
+            <div class="input-field col s12">
+              <button class="btn cyan waves-effect waves-light right" type="submit" name="action">Enviar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+          </div>
+      </form>
+    </div>
+    <div class="col s12 m4 l2 "></div>
+  </div> 
+   </div>
+  </div>
