--- a/src/app/modulos/administracion/productos/crearproducto/crearproducto.component.html
+++ b/src/app/modulos/administracion/productos/crearproducto/crearproducto.component.html
@@ -1,1 +1,41 @@
-<p>crearproducto works!</p>
+<div class="container">
+  <div class="row center-align ">
+    <div class="col s12 "><h4 class="text-center grey-text text-lighten-1 ">Crear Producto</h4> </div>
+  </div>
+    <div>
+        <form [formGroup]="fgvalidador" (ngSubmit)="guardarproducto()" >
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">art_track</i>
+                <input formControlName="nombre" id="nombre" type="text">
+                <label for="nombre">Nombre</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">euro_symbol</i>
+                <input formControlName="precio"  id="precio" type="text">
+                <label for="precio">Precio</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">imagee</i>
+                <input formControlName="imagen"  id="imagen" type="text">
+                <label for="imagen">Imagen</label>
+              </div>
+            </div>
+            
+              <div class="row">
+                <div class="input-field col s12">
+                  <button [disabled]="!fgvalidador.valid" class="btn cyan waves-effect waves-light right" type="submit" name="action">Crear
+                    <i class="material-icons right">send</i>
+                  </button>
+                </div>
+              </div>
+           
+          </form>
+
+    </div>
+
+</div>
