--- a/src/app/plantila/barranav/barranav.component.html
+++ b/src/app/plantila/barranav/barranav.component.html
@@ -1,10 +1,34 @@
-<nav>
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Logo</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-  </div>
-</nav>
+<!-- Dropdown Structure -->
+<div class="container">
+  <ul class="dropdown-content  " id="dropdown" >
+    <li *ngIf ="!seiniciosesion"    class="blue-text text-lighten-5"><a routerLink="/administracion/creacionpersona"><i class="material-icons">cloud_done</i>Registrarse     </a></li>   
+    <li *ngIf ="!seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/seguridad/identificacion"><i class="material-icons">cloud_queue</i>Iniciar Sesion</a></li>      
+    <li *ngIf ="seiniciosesion"class="blue-text text-lighten-5"><a routerLink="/seguridad/cerrarsesion"><i class="material-icons">cloud_off</i>Cerrar sesion</a></li>
+    <li *ngIf ="seiniciosesion"  class="blue-text text-lighten-5"><a routerLink="/seguridad/recuperaclave"><i class="material-icons">cloud_off</i>Olvido</a></li>
+    <li *ngIf ="seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/administracion/persona"><i class="material-icons">cloud_off</i>Personas</a></li>
+    <li *ngIf ="seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/administracion/listarproductos"><i class="material-icons">cloud_off</i>Productos</a></li>
+  </ul>
+  <nav>
+    <div class="nav-wrapper light-blue" >
+      <a href="#!" class="brand-logo left hide-on-med-only hide-on-small-only"><i class="material-icons">adb</i>TIENDA GEEK AMIGURUMI</a>
+      <a href="#!" class="brand-logo hide-on-large-only hide-on-small-only">TIENDA GEEK</a>
+      <a href="#!" class="brand-logo hide-on-large-only hide-on-med-only">TIENDA</a>
+      
+      <a href="#" data-target="mobile-Nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a routerLink="/inicio">Home</a></li>
+        <li><a href="badges.html">Categorias</a></li>
+        <li><a href="mobile.html">Lo más Nuevo</a></li>        
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown">Cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
+      </ul>
+    </div>
+  </nav>  
+</div>
+<ul class="sidenav" id="mobile-Nav">
+  <li *ngIf ="!seiniciosesion"    class="blue-text text-lighten-5"><a routerLink="/administracion/creacionpersona"><i class="material-icons">cloud_done</i>Registrarse     </a></li>   
+    <li *ngIf ="!seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/seguridad/identificacion"><i class="material-icons">cloud_queue</i>Iniciar Sesion</a></li>      
+    <li *ngIf ="seiniciosesion"class="blue-text text-lighten-5"><a routerLink="/seguridad/cerrarsesion"><i class="material-icons">cloud_off</i>Cerrar sesion</a></li>
+    <li *ngIf ="seiniciosesion"  class="blue-text text-lighten-5"><a routerLink="/seguridad/recuperaclave"><i class="material-icons">cloud_off</i>Olvido</a></li>
+    <li *ngIf ="seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/administracion/persona"><i class="material-icons">cloud_off</i>Personas</a></li>
+    <li *ngIf ="seiniciosesion" class="blue-text text-lighten-5"><a routerLink="/administracion/listarproductos"><i class="material-icons">cloud_off</i>Productos</a></li>
+</ul>
