--- a/src/app/plantila/error/error.component.html
+++ b/src/app/plantila/error/error.component.html
@@ -1,1 +1,19 @@
-<p>error works!</p>
+<div class="container z-depth-2">
+<div class="row">
+    <div class="col s12">
+      <div class="container"><div class="section section-404 p-0 m-0 height-100vh">
+<div class="row">
+  <!-- 404 -->
+  <div class="col s12 center-align white">
+    <img src="/src/assets/images/error-2 (1).png" class="bg-image-404" alt="">
+    <h1 class="error-code m-0">404</h1>
+    <h6 class="mb-2">Pagina no encontrada</h6>
+    <a class="btn cyan waves-effect waves-light  mb-4" href="index.html">Volver AL inicio </a>
+    
+  </div>
+</div>
+</div>
+      </div>
+      <div class="content-overlay"></div>
+    </div>
+</div>
