--- a/src/app/plantila/piedepagina/piedepagina.component.html
+++ b/src/app/plantila/piedepagina/piedepagina.component.html
@@ -1,26 +1,56 @@
-<footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-      </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
-        <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
+<div class="container">
+  <footer class="page-footer #03a9f4 light-blue">
     <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <div class="row">
+        <div class="col s12 m6 l3 ">
+          <h5 class="white-text">SERVICIO AL CLIENTE</h5>
+          <p class="grey-text text-lighten-4">Horario de Atención Online:</p>
+          <p class="grey-text text-lighten-4">Lunes a Domingo de 10a.m a 8p.m</p>
+          <p class="grey-text text-lighten-4">Celular: (+57)</p>
+          <p class="grey-text text-lighten-4">Email: ventasonline@</p>
+          <p class="grey-text text-lighten-4">Contáctanos</p>
+          <p class="grey-text text-lighten-4">Preguntas Frecuentes</p>  
+        </div>      
+          
+          <div  class="col s12 m6 l3 "> 
+      <h5 class="grey-text text-lighten-4">ACERCA DE </h5>  
+      <p class="grey-text text-lighten-4">Quienes Somos</p>
+      <p class="grey-text text-lighten-4">Trabaja con Nosotros</p>
+      <p class="grey-text text-lighten-4">Como ser Proveedor</p>
+      <p class="grey-text text-lighten-4">Ventas al Por Mayor</p> 
+    </div> 
+  
+    <div class="col s12 m6 l3  ">
+      <h5 class="white-text">NUESTRAS TIENDAS</h5>
+      <p class="grey-text text-lighten-4">SEDE PRINCIPAL</p>
+      <p class="grey-text text-lighten-4">Carrera 15</p>
+      <p class="grey-text text-lighten-4">Bucaramanga, Colombia</p>
+      <p class="grey-text text-lighten-4">Teléfono: (+571) </p>        
     </div>
-  </div>
-</footer>
+    <div class="col s12 m6 l3 ">
+      <h5 class="white-text">TU CUENTA</h5>
+      <p class="grey-text text-lighten-4">Seguimiento de orden</p>
+      <p class="grey-text text-lighten-4">Cambios y Devoluciones</p>
+      <p class="grey-text text-lighten-4">Política de tratamiento de datos</p>
+      <p class="grey-text text-lighten-4">Términos y Condiciones </p>  
+      <p class="grey-text text-lighten-4">Lista de deseos </p>       
+    </div>
+  
+  
+  
+  
+      </div>
+    
+  
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        ©2021 - TIENDA GEEK AMIGURUMI    |   Todos los Derechos Reservados  |   Powered by miguel inc
+      </div>
+    </div>
+  </footer>
+
+
+
+</div>
     
