--- a/src/app/modulos/administracion/productos/crearproducto/crearproducto.component.html
+++ b/src/app/modulos/administracion/productos/crearproducto/crearproducto.component.html
@@ -7,21 +7,21 @@
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons prefix">art_track</i>
-                <input formControlName="nombre" id="nombre" type="text">
+                <input formControlName="nombre" name="nombre" id="nombre" type="text">
                 <label for="nombre">Nombre</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <i class="material-icons prefix">euro_symbol</i>
-                <input formControlName="precio"  id="precio" type="text">
+                <i class="material-icons prefix">monetization_on</i>
+                <input formControlName="precio" name="precio" id="precio" type="text">
                 <label for="precio">Precio</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <i class="material-icons prefix">imagee</i>
-                <input formControlName="imagen"  id="imagen" type="text">
+                <i class="material-icons prefix">image</i>
+                <input formControlName="imagen" name="imagen" id="imagen" type="text">
                 <label for="imagen">Imagen</label>
               </div>
             </div>
