--- a/src/app/modulos/administracion/productos/editarproducto/editarproducto.component.html
+++ b/src/app/modulos/administracion/productos/editarproducto/editarproducto.component.html
@@ -1,1 +1,42 @@
-<p>editarproducto works!</p>
+<div class="container">
+    <div class="row center-align ">
+      <div class="col s12 "><h4 class="text-center grey-text text-lighten-1 ">Editar Producto</h4> </div>
+    </div>
+      <div>
+          <form [formGroup]="fgvalidador" (ngSubmit)="editarproducto()" >
+            <input formControlName="id" name="id" id="id" type="hidden" >
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">art_track</i>
+                  <input formControlName="nombre" name="nombre" id="nombre" type="text">
+                  <label class="active" for="nombre">Nombre</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">euro_symbol</i>
+                  <input formControlName="precio" name="precio" id="precio" type="text">
+                  <label class="active" for="precio">Precio</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">image</i>
+                  <input formControlName="imagen" name="imagen" id="imagen" type="text">
+                  <label class="active" for="imagen">Imagen</label>
+                </div>
+              </div>
+              
+                <div class="row">
+                  <div class="input-field col s12">
+                    <button [disabled]="!fgvalidador.valid" class="btn cyan waves-effect waves-light right" type="submit" name="action">Editar
+                      <i class="material-icons right">send</i>
+                    </button>
+                  </div>
+                </div>
+             
+            </form>
+  
+      </div>
+  
+  </div>
