--- a/src/app/plantila/piedepagina/piedepagina.component.html
+++ b/src/app/plantila/piedepagina/piedepagina.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <footer class="page-footer #03a9f4 light-blue">
-    <div class="container">
+  <footer class="page-footer light-blue">
+    
       <div class="row">
         <div class="col s12 m6 l3 ">
           <h5 class="white-text">SERVICIO AL CLIENTE</h5>
@@ -42,7 +42,7 @@
       </div>
     
   
-    </div>
+    
     <div class="footer-copyright">
       <div class="container">
         ©2021 - TIENDA GEEK AMIGURUMI    |   Todos los Derechos Reservados  |   Powered by miguel inc
