--- a/src/app/modulos/administracion/empleado/crearempleado/crearempleado.component.html
+++ b/src/app/modulos/administracion/empleado/crearempleado/crearempleado.component.html
@@ -1,1 +1,50 @@
-<p>crearempleado works!</p>
+<div class="container" >
+    
+    
+    <div class="col s12 "><h3 class="center-align grey-text text-lighten-1 ">Crear Empleado</h3> </div>
+  
+  <div >
+  <div class="row center-align col s12 m4 l2 z-depth-2"> 
+      <form [formGroup]="fgvalidador" (ngSubmit)="crearempleado()">
+        <div class="row ">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">account_circle</i>
+            <input formControlName="nombre" id="nombre" type="text" class="validate">
+            <label for="nombre">Nombre</label>
+          </div>  
+        </div> 
+          <div class="row ">   
+          <div class="input-field col s12">
+            <i class="material-icons prefix">recent_actors</i>
+          <input formControlName="apellidos" id="apellidos" type="text" class="validate">
+          <label for="apellidos">Apellidos</label>
+        </div>       
+      </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input formControlName="correo" id="correo" type="text" class="validate">
+            <label for="correo">Email</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">phone</i>
+            <input formControlName="celular" id="celular" type="text" class="validate">
+            <label for="celular">Telefono</label>
+          </div>
+        </div>
+        <div class="row">  
+            <div class="input-field col s12">
+              <button [disabled]="!fgvalidador.valid" class="btn cyan waves-effect waves-light right" type="submit" name="action">Enviar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+          </div>
+      </form>
+    </div>
+  </div>
+ 
+   </div>
+
+
